bug 564309 - cache the secondary font used for mathml metrics. r=roc approval1.9.2.9=dveditz