gfx/thebes/public/gfxWindowsFonts.h
@@ -366,6 +366,11 @@ private:
 
     cairo_antialias_t mAntialiasOption;
 
+    // a copy of the font without antialiasing, if needed for separate
+    // measurement by mathml code; this is not cached separately in the
+    // gfxFontCache
+    nsAutoPtr<gfxWindowsFont> mNonAAFont;
+
     virtual PRBool SetupCairoFont(gfxContext *aContext);
 };
 
